<?xml version="1.0" encoding="utf-8"?><!--
  ~ /* Copyright 2020 ProMobi Technologies Pvt. Ltd. - All Rights Reserved
  ~  *
  ~  * Unauthorized copying of this file, via any medium is strictly prohibited
  ~  * Proprietary and confidential
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/custom_activate_admin_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/custom_activate_admin_help"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/step_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/step_one_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_step_one"
                    android:textSize="16sp" />

                <!-- <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/step_one_text"
                    android:layout_centerHorizontal="true"
                    android:padding="2dp"
                    android:src="@drawable/custom_step_one_img" /> -->

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/step_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/step_two_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_step_two"
                    android:textSize="16sp" />

                <!-- <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/step_two_text"
                    android:layout_centerHorizontal="true"
                    android:padding="2dp"
                    android:src="@drawable/custom_step_two_img" /> -->

            </RelativeLayout>

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_device_admin_note"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>